--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 					<tr><td>1. Disclaimer: This is not legal or financial advice. Verify information yourself. In other words, don't trust some asshole on the internet. </td></tr>
 					<tr><td>2. This site is a work in progress. Please, <a href="mailto:matt@bitcoinatlarge.com">email the webmaster</a> with additions, improvements, and comments.</td></tr>
 					<tr><td>3. Donations Appreciated: 1JsNoeWZVJ9Kfo9jEJdfPsser9R6uDWSP9</td></tr>
-					<tr><td>4. Contribute to this project! Github link to be added ASAP.</td></tr>
+					<tr><td>4. Contribute to this project! <a href="http://github.com/Nuclear-Power/Bitcoin-at-Large" target="_blank">Github</a>"</td></tr>
 				</table>
 
 <!-----------------------------Google Analytics Script---------------------------------->
