--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
 					<tr>
 						<td>Poland</td>
 						<td>Legal</td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td>VAT 23%, capital gains</td>
+						<td>electronic certificate / awaiting classification</td>
+						<td><a href="http://bitcurex.com">bitcurex.com</a></td>
 						<td><a href="http://www.pb.pl/3485125,94998,minfin-bitcoin-nie-jest-nielegalny" target="_blank">Polish Site</a>
 							</td>
 					</tr>
